add 2 endpoints one for retrieving todays news and one for trending news
